--- a/test.css
+++ b/test.css
@@ -120,7 +120,26 @@ body{
     margin-bottom: 40px;
 }
 
-/* multiple styles seperated by a , */
-#content,
-ul li a{ box-shadow: 0px 1px 1px #999; }
+.table-sortable tbody tr {
+    cursor: move;
+}
+
+body {
+    background-color: #eee;
+}
+
+*[role="form"] {
+    max-width: 530px;
+    padding: 15px;
+    margin: auto;
+    background-color: #fff;
+    border-radius: 0.3em;
+
+}
+
+*[role="form"] h2 {
+    margin-left: 5em;
+    margin-bottom: 1em;
+}
+
 
